Add controller unit tests and review the exchange rate service, model and tests